hmm le temps d'aller se concher

--- a/src/python/base-station/static/index.html
+++ b/src/python/base-station/static/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Midi30 | Chandelier | #44M</title>
+    <title>That Vinci</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
     <div>Hello world</div>
+    <button onclick="goto_position()"></button>
+    <script src="./script.js"></script>
 </body>
 </html>
