--- a/src/python/base-station/static/index.html
+++ b/src/python/base-station/static/index.html
@@ -7,8 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-    <div>Hello world</div>
-    <button onclick="goto_position()"></button>
+    <input id="x">X Position : </input>
+    <input id="y">Y Position : </input><`2`>
+    <button onclick="goto_position()">Go To Position</button>
     <script src="./script.js"></script>
 </body>
 </html>
